# giveaway_telegram_bot

./: .env  .env_example  Cargo.toml  Dockerfile
src/: consts.rs  errors.rs  main.rs  models.rs  utils.rs
src/calls/: basic_methods.rs  giveaway_methods.rs  mod.rs  models.rs  types.rs
