[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
log = "0.4.27"
teloxide = { version = "0.15.0", features = ["macros", "rand", "redis-storage", "bincode-serializer"] }
dotenv = "0.15.0"
chrono = "0.4.40"
thiserror = "2.0.12"
fern = "0.7.1"
colored = "3.0.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand = "0.9.1"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
redis = { version = "0.30.0", features = ["uuid"] }
bb8-redis = "0.22.0"
serde_json = "1.0.140"